--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Visualize TensorFlow SavedModel on Web"
+      content="Inspect TensorFlow SavedModel on Web"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SavedModel Visualizer</title>
+    <title>SavedModel Inspector</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
